Fix contrast a bit

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ h1 {
   display: block;
   overflow: hidden;
   white-space: pre;
-  color: #2f2f2f;
+  color: #555;
   opacity: .85;
   font-size: 11px;
   font-family: monospace;
@@ -119,7 +119,7 @@ p {
   white-space: pre-wrap;
   font-size: 11px;
   font-family: monospace;
-  color: #3c3c3c;
+  color: #777;
 }
 .address {
   color: #a2a2a2;
